# nordnet-cli

./: .gitignore  CHANGELOG.md  CONTRACTS.md  CONTRIBUTING.md  Cargo.toml  PROCESS.md  README.md  SECURITY.md  cliff.toml  install.sh  release.toml
crates/nordnet-api/: Cargo.toml  README.md  cliff.toml
crates/nordnet-api/docs-extract/: INVENTORY.md
crates/nordnet-api/docs-extract/_definitions/: Account.md  AccountInfo.md  AccountTransactionsToday.md  ActivationCondition.md  Amount.md  ApiKeyLoginResponse.md  ApiKeyStartLoginRequest.md  ApiKeyVerifyLoginRequest.md  AttributeResult.md  AttributeResults.md  BullBearEntity.md  BullBearListResults.md  CalendarDay.md  CertificateInfo.md  ChallengeResponse.md  CompanyInfo.md  Country.md  DerivativeInfo.md  DiffWithDecimals.md  ErrorResponse.md  EtpInfo.md  ExchangeInfo.md  Feed.md  FilterDetails.md  FilterVal.md  HistoricalReturnsInfo.md  Instrument.md  InstrumentEligibility.md  InstrumentInfo.md  InstrumentPublicTrades.md  InstrumentType.md  Issuer.md  KeyInformationDocuments.md  KeyRatiosInfo.md  KoCalcInfo.md  KoInfo.md  Ledger.md  LedgerInformation.md  LeverageFilter.md  LoggedInStatus.md  (+38 more)
crates/nordnet-api/docs-extract/accounts/: get_account_info.md  get_returns_today.md  list_accounts.md  list_ledgers.md  list_positions.md  list_trades.md
crates/nordnet-api/docs-extract/countries/: get_country.md  list_countries.md
crates/nordnet-api/docs-extract/instrument_search/: get_attributes.md  search_bullbearlist.md  search_minifuturelist.md  search_optionlist_pairs.md  search_stocklist.md  search_unlimitedturbolist.md
crates/nordnet-api/docs-extract/instruments/: get_instrument.md  get_leverage_filters.md  get_suitability.md  get_type.md  list_leverages.md  list_trades.md  list_types.md  list_underlyings.md  lookup.md
crates/nordnet-api/docs-extract/login/: logout.md  refresh_session.md  start_login.md  verify_login.md
crates/nordnet-api/docs-extract/main_search/: search.md
crates/nordnet-api/docs-extract/markets/: get_market.md  list_markets.md
crates/nordnet-api/docs-extract/news/: get_news_item.md  list_news_sources.md
crates/nordnet-api/docs-extract/orders/: activate_order.md  cancel_order.md  list_orders.md  modify_order.md  place_order.md
crates/nordnet-api/docs-extract/root/: get_system_status.md
crates/nordnet-api/docs-extract/tick_sizes/: get_tick_size.md  list_tick_sizes.md
crates/nordnet-api/docs-extract/tradables/: get_suitability.md  get_tradable_info.md  list_trades.md
crates/nordnet-api/fixtures/accounts/: get_account_info.meta.toml  get_account_info.response.json  get_returns_today.meta.toml  get_returns_today.response.json  list_account_trades.meta.toml  list_account_trades.response.json  list_accounts.meta.toml  list_accounts.response.json  list_ledgers.meta.toml  list_ledgers.response.json  list_positions.meta.toml  list_positions.response.json
crates/nordnet-api/fixtures/countries/: get_country.meta.toml  get_country.response.json  list_countries.meta.toml  list_countries.response.json
crates/nordnet-api/fixtures/instrument_search/: get_attributes.meta.toml  get_attributes.response.json  search_bullbearlist.meta.toml  search_bullbearlist.response.json  search_minifuturelist.meta.toml  search_minifuturelist.response.json  search_optionlist_pairs.meta.toml  search_optionlist_pairs.response.json  search_stocklist.meta.toml  search_stocklist.response.json  search_unlimitedturbolist.meta.toml  search_unlimitedturbolist.response.json
crates/nordnet-api/fixtures/instruments/: get_instrument.meta.toml  get_instrument.response.json  get_instrument_suitability.meta.toml  get_instrument_suitability.response.json  get_leverage_filters.meta.toml  get_leverage_filters.response.json  get_type.meta.toml  get_type.response.json  list_instrument_trades.meta.toml  list_instrument_trades.response.json  list_leverages.meta.toml  list_leverages.response.json  list_types.meta.toml  list_types.response.json  list_underlyings.meta.toml  list_underlyings.response.json  lookup.meta.toml  lookup.response.json
crates/nordnet-api/fixtures/login/: logout.meta.toml  refresh_session.meta.toml  refresh_session.response.json  start_login.meta.toml  start_login.request.json  start_login.response.json  verify_login.meta.toml  verify_login.request.json  verify_login.response.json
crates/nordnet-api/fixtures/main_search/: search.meta.toml  search.response.json
crates/nordnet-api/fixtures/markets/: get_market.meta.toml  get_market.response.json  list_markets.meta.toml  list_markets.response.json
crates/nordnet-api/fixtures/news/: get_news_item.meta.toml  get_news_item.response.json  list_news_sources.meta.toml  list_news_sources.response.json
crates/nordnet-api/fixtures/orders/: activate_order.meta.toml  activate_order.response.json  cancel_order.meta.toml  cancel_order.response.json  list_orders.meta.toml  list_orders.response.json  modify_order.meta.toml  modify_order.request.json  modify_order.response.json  place_order.meta.toml  place_order.request.json  place_order.response.json
crates/nordnet-api/fixtures/root/: get_system_status.meta.toml  get_system_status.response.json
crates/nordnet-api/src/: auth.rs  client.rs  error.rs  ids.rs  lib.rs  pagination.rs
crates/nordnet-api/tests/: accounts_test.rs  client_test.rs  countries_test.rs  instrument_search_test.rs  instruments_test.rs  login_test.rs  main_search_test.rs  markets_test.rs  news_test.rs  orders_test.rs  root_test.rs  tick_sizes_test.rs  tradables_test.rs
crates/nordnet-cli/: Cargo.toml  LICENSE-APACHE  README.md  cliff.toml
crates/nordnet-cli/src/: config.rs  main.rs  output.rs  session.rs
crates/nordnet-feed/: Cargo.toml  README.md  cliff.toml
crates/nordnet-feed/src/: codec.rs  command.rs  config.rs  error.rs  event.rs  lib.rs  private.rs  private_client.rs  public.rs  public_client.rs  transport.rs
crates/nordnet-feed/tests/: client_test.rs  codec_test.rs  command_test.rs  event_test.rs
crates/nordnet-model/: Cargo.toml  README.md  cliff.toml
crates/nordnet-model/src/: auth.rs  error.rs  ids.rs  lib.rs
notes/: 3-orders-impl.md  (+7 more)
(+77 files in other folders)
