[workspace]
resolver = "2"
members = [
    "crates/nordnet-api",
    "crates/nordnet-cli",
    "xtask",
]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.80"

# Pinned to current stable releases (verified against crates.io).
# See PROCESS.md Phase 0 for rationale.
[workspace.dependencies]
# HTTP / async
reqwest = { version = "0.13.3", default-features = false, features = ["json", "rustls", "http2"] }
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread", "time"] }

# Serde stack
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# CLI
clap = { version = "4.6.1", features = ["derive"] }

# Errors
thiserror = "2.0.18"
anyhow = "1.0.102"

# Crypto for SSH-key login flow
# rsa 0.9 requires sha2 0.10.x — must pin sha2 to 0.10 line
rsa = { version = "0.9.10", features = ["sha2"] }
sha2 = "0.10.9"
base64 = "0.22.1"

# Domain types
rust_decimal = { version = "1.41.0", features = ["serde-with-str"] }
time = { version = "0.3.47", features = ["serde", "serde-well-known", "macros"] }

# Config
toml = "1.1.2"
dirs = "6.0.0"

# Test-only
wiremock = "0.6.5"
pretty_assertions = "1.4.1"
# rand_chacha pinned to 0.3 to match rsa 0.9's rand_core 0.6 line.
rand_chacha = "0.3.1"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
