[workspace]
resolver = "2"
members = [
    "crates/nordnet-api",
    "crates/nordnet-cli",
    "crates/nordnet-feed",
    "crates/nordnet-model",
    "xtask",
]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.80"

# Pinned to current stable releases (verified against crates.io).
# See PROCESS.md Phase 0 for rationale.
[workspace.dependencies]
# HTTP / async
reqwest = { version = "0.13.3", default-features = false, features = ["json", "rustls", "http2"] }
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread", "time"] }
tokio-rustls = "0.26"
tokio-util = { version = "0.7", features = ["codec"] }

# TLS
rustls = "0.23"
webpki-roots = "1"

# Serde stack
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", features = ["arbitrary_precision"] }
serde_urlencoded = "0.7.1"

# CLI
clap = { version = "4.6.1", features = ["derive", "env"] }

# Errors
thiserror = "2.0.18"
anyhow = "1.0.102"

# Crypto for SSH-key login flow.
# Nordnet's external API v2 uses Ed25519 (per their official
# `nordnet/next-api-v2-examples` repo, Sep 2025). Keys are loaded from
# OpenSSH format via `ssh-key`, then converted to `ed25519-dalek`
# `SigningKey` for raw EdDSA signing of the challenge.
ed25519-dalek = "2.2.0"
ssh-key = { version = "0.6.7", default-features = false, features = ["alloc", "ed25519"] }
base64 = "0.22.1"

# Domain types
rust_decimal = { version = "1.41.0", features = ["serde-arbitrary-precision"] }
time = { version = "0.3.47", features = ["serde", "serde-well-known", "macros"] }

# Config
toml = "1.1.2"
dirs = "6.0.0"

# Test-only
wiremock = "0.6.5"
pretty_assertions = "1.4.1"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
