[package]
name = "nordnet-api"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Typed REST bindings for the Nordnet External API v2."

[dependencies]
reqwest = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_urlencoded = { workspace = true }
thiserror = { workspace = true }
ed25519-dalek = { workspace = true }
ssh-key = { workspace = true }
base64 = { workspace = true }
rust_decimal = { workspace = true }
time = { workspace = true }

[dev-dependencies]
wiremock = { workspace = true }
pretty_assertions = { workspace = true }
# `test-util` enables `#[tokio::test(start_paused = true)]` so the 429/503
# retry tests advance virtual time instead of sleeping for real seconds.
tokio = { workspace = true, features = ["test-util"] }
