[package]
name = "nordnet-cli"
description = "Agent-friendly command-line interface for the Nordnet External API."
readme = "README.md"
keywords = ["nordnet", "trading", "cli", "finance", "stocks"]
categories = ["command-line-utilities", "finance"]
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[[bin]]
name = "nordnet"
path = "src/main.rs"

[features]
default = ["orders-cli"]
# Enables the `nordnet orders ...` namespace. Gated behind a feature
# only because Phase 0 needed to ship the foundation-locked
# `cmd/orders.rs` dispatcher before the `orders_read` / `orders_write`
# modules existed. Both modules now exist (Phase 4 wave 4); the feature
# is on by default.
orders-cli = []

[dependencies]
nordnet-api = { path = "../nordnet-api", version = "0.1" }
nordnet-model = { path = "../nordnet-model", version = "0.1" }
clap = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
rust_decimal = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
time = { workspace = true }
