[package]
name = "nordnet-cli"
description = "Agent-friendly command-line interface for the Nordnet External API."
readme = "README.md"
keywords = ["nordnet", "trading", "cli", "finance", "stocks"]
categories = ["command-line-utilities", "finance"]
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[[bin]]
name = "nordnet"
path = "src/main.rs"

[features]
default = ["orders-cli"]
# Enables the `nordnet orders <op>` namespace (place / modify / activate /
# cancel / list). On by default; disable with
# `cargo install nordnet-cli --no-default-features` to ship a read-only
# build.
orders-cli = []

[dependencies]
nordnet-api = { path = "../nordnet-api", version = "0.1" }
nordnet-model = { path = "../nordnet-model", version = "0.1" }
clap = { workspace = true }
clap_complete = { workspace = true }
indoc = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
rust_decimal = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
time = { workspace = true }
