[package]
name = "nordnet-feed"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
nordnet-model = { path = "../nordnet-model" }
tokio = { workspace = true, features = ["io-util", "net"] }
tokio-util = { workspace = true }
tokio-rustls = { workspace = true }
rustls = { workspace = true }
webpki-roots = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rust_decimal = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
rust_decimal = { workspace = true }
