[package]
name = "nordnet-feed"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
nordnet-model = { path = "../nordnet-model" }
# Self-contained feature set — does not rely on workspace-level union from
# sibling crates. `time` is required by the heartbeat watchdog and `macros`
# by `#[tokio::test]` in the integration tests.
tokio = { workspace = true, features = ["io-util", "macros", "net", "time"] }
tokio-util = { workspace = true }
tokio-rustls = { workspace = true }
rustls = { workspace = true }
webpki-roots = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rust_decimal = { workspace = true }
thiserror = { workspace = true }
# TCP keepalive on `tokio::net::TcpStream`. `set_nodelay` is on tokio
# directly; keepalive needs `socket2::SockRef::from(&tcp)`.
socket2 = "0.6.3"
