[package]
name = "nordnet-feed"
description = "Streaming public + private feed clients for the Nordnet External API v2."
readme = "README.md"
keywords = ["nordnet", "trading", "streaming", "finance", "stocks"]
categories = ["api-bindings", "finance"]
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
nordnet-model = { path = "../nordnet-model", version = "0.1" }
# Self-contained feature set — does not rely on workspace-level union from
# sibling crates. `time` is required by the heartbeat watchdog and `macros`
# by `#[tokio::test]` in the integration tests.
tokio = { workspace = true, features = ["io-util", "macros", "net", "time"] }
tokio-util = { workspace = true }
tokio-rustls = { workspace = true }
rustls = { workspace = true }
webpki-roots = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rust_decimal = { workspace = true }
thiserror = { workspace = true }
# TCP keepalive on `tokio::net::TcpStream`. `set_nodelay` is on tokio
# directly; keepalive needs `socket2::SockRef::from(&tcp)`.
socket2 = "0.6.3"
