[package]
name = "nordnet-model"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Pure data types and crypto for the Nordnet External API v2 (no I/O)."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
ed25519-dalek = { workspace = true }
ssh-key = { workspace = true }
base64 = { workspace = true }
rust_decimal = { workspace = true }
time = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
