[package]
name = "nordnet-model"
description = "Pure data types and crypto for the Nordnet External API v2 (no I/O)."
readme = "README.md"
keywords = ["nordnet", "trading", "finance", "stocks", "ed25519"]
categories = ["finance", "data-structures"]
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
ed25519-dalek = { workspace = true }
ssh-key = { workspace = true }
base64 = { workspace = true }
rust_decimal = { workspace = true }
time = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
